test/good/13.cc
#include <stdio.h>
#include <string>

using std::string;

void printf(string s)
{
    // print it
    return;
}

int main() {
   printf("Hello, World!");
   return 0;
}