test/bad/7.cc
#include <string>

using std::string;

int main()
{
    string x, y, z;
    x = "uwu";
    return x;
}